--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-components": "^3.1.2",
     "@apollo/react-hooks": "^3.1.2",
+    "algoliasearch": "^3.35.0",
+    "apollo": "^2.19.0",
     "apollo-boost": "^0.4.4",
     "bootstrap": "^4.3.1",
     "downshift": "^3.3.4",
     "graphql": "^14.5.8",
     "react": "^16.10.2",
+    "react-apollo": "^3.1.2",
     "react-dom": "^16.10.2",
+    "react-instantsearch-dom": "^5.7.0",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.0.1",
     "styled-components": "^4.4.0"
